# flopphouse

./: .gitignore  Makefile  docker-compose.yaml
backend/: isort.cfg  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4e23f7a1a794_email_confirmation.py  8f918a675a0a_user_initial.py
backend/docker/fastapi/: Dockerfile
backend/docker/mongo/: init-mongo.sh
backend/docker/postgres/: init-postgres.sql
backend/docker/python/: Dockerfile
backend/scripts/: start.sh  test.sh
backend/src/: database.py
backend/src/apps/user/actions/: __init__.py  user.py
backend/src/apps/user/data_access/: __init__.py  email.py  user.py
backend/src/apps/user/dependencies/: __init__.py  email.py  user.py
backend/src/apps/user/models/: __init__.py  email.py  user.py
backend/src/apps/user/routers/: user.py
backend/src/apps/user/schemas/: __init__.py  email.py  user.py
backend/src/apps/user/utils/: email.py
backend/src/config/: config.py
backend/src/dependencies/: __init__.py  database.py
backend/src/settings/: __init__.py  config.py  database.py
backend/src/user/actions/: __init__.py  user.py
backend/src/user/models/: __init__.py  user.py
backend/src/user/routers/: __init__.py  user.py
backend/src/user/utils/: __init__.py
backend/src/utils/: email.py  errors.py
backend/src/utils/data_access/: base.py
backend/src/utils/schemas/: __init__.py  email.py
backend/templates/: email_confirmation.html
backend/tests/: conftest.py
backend/tests/test_apps/test_user/test_data_access/: test_user.py
config/: .env.template
(+19 files in other folders)
